--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "feather": "^0.0.6",
     "firebase": "^11.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
