--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^7.0.14",
     "expo": "^52.0.6",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
