--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.14",
+    "@supabase/supabase-js": "^2.47.12",
     "@types/firebase": "^2.4.32",
     "expo": "~52.0.7",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "^16.0.4",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.6",
