--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/stack": "^7.0.14",
     "@supabase/supabase-js": "^2.47.12",
     "@types/firebase": "^2.4.32",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "^52.0.27",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.3",
