--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "base64-arraybuffer": "^1.0.2",
     "expo": "^52.0.27",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.5",
     "expo-dev-client": "~5.0.10",
     "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.4",
     "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.4",
+    "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
@@ -50,6 +50,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
