--- a/package.json
+++ b/package.json
@@ -27,34 +27,31 @@
     "@supabase/supabase-js": "^2.47.12",
     "@types/firebase": "^2.4.32",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^52.0.27",
+    "expo": "~52.0.31",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.10",
+    "expo-dev-client": "~5.0.11",
     "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
-    "expo-image-picker": "^16.0.4",
+    "expo-image-picker": "~16.0.5",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.0.2",
-    "i": "^0.3.7",
-    "npm": "^11.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-star-rating-widget": "^1.9.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
